--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-clap = "4.5.8"
+clap = { version = "4.5.8", features = ["derive"] }
 git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
